📱 Fix spacings

--- a/frontend21/scss/components/section.scss
+++ b/frontend21/scss/components/section.scss
@@ -45,6 +45,7 @@
   }
 
   &.--fullscreen {
+    margin: 0;
     grid-column: 1 / -1;
   }
 }
