--- a/frontend21/scss/components/text-media.scss
+++ b/frontend21/scss/components/text-media.scss
@@ -65,6 +65,8 @@
   }
 
   &.--center {
-    align-items: center;
+    @media (min-width: 768px) {
+      align-items: center;
+    }
   }
 }
